edit Test Demo after reviewed

--- a/module1/bai_tap_test/Bai4QuanLyTaiKhoanNganHang.html
+++ b/module1/bai_tap_test/Bai4QuanLyTaiKhoanNganHang.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <h3>Chương trình quản lý tài khoản ngân hàng</h3>
-<input type="text" id="maTaiKhoan" placeholder="Nhập mã TK">
+<input type="number" id="maTaiKhoan" placeholder="Nhập mã TK">
 <input type="text" id="chuTaiKhoan" placeholder="Nhập chủ TK">
 <input type="text" id="nganHang" placeholder="Nhập Ngân hàng">
 <input type="number" id="tongTien" placeholder="Nhập tổng tiền tài khoản">
@@ -61,7 +61,6 @@
             this.nganHang = nganHang;
             this.tongTienTaiKhoan = tongTienTaiKhoan;
         }
-
 
         getMaTaiKhoan() {
             return this.maTaiKhoan;
@@ -98,17 +97,13 @@
         toString() {
             return this.getChuTaiKhoan() + " " + this.getChuTaiKhoan() + " " + this.getNganHang() + " " + this.getTongTienTaiKhoan();
         }
-
     }
-
 
     let taiKhoan1 = new TaiKhoanNganHang("001", "Khoa", "BIDV", 10000);
     let danhSachTaiKhoan = [taiKhoan1];
-
     display(danhSachTaiKhoan);
 
     function display(danhSach) {
-
         let tableString = "<table>\n" +
             "    <tr>\n" +
             "        <th>STT</th>\n" +
@@ -117,10 +112,8 @@
             "        <th>Ngân Hàng</th>\n" +
             "        <th> Tổng tiền tài khoản</th>\n" +
             "    </tr>";
-
         for (let i = 0; i < danhSach.length; i++) {
             tableString += "<tr>";
-
             tableString += '<td>' + (i + 1) + '</td>';
             tableString += '<td>' + danhSach[i].getMaTaiKhoan() + '</td>';
             tableString += '<td>' + danhSach[i].getChuTaiKhoan() + '</td>';
@@ -128,9 +121,7 @@
             tableString += '<td>' + danhSach[i].getTongTienTaiKhoan() + '</td>';
             tableString += "</tr>";
         }
-
         tableString += "</table>";
-
         document.getElementById("display").innerHTML = tableString;
     }
 
@@ -139,19 +130,16 @@
         let chuTK = document.getElementById("chuTaiKhoan").value;
         let nganHang = document.getElementById("nganHang").value;
         let tongTien = document.getElementById("tongTien").value;
-
-        let checking = maTK != "" && chuTK != "" && nganHang != "" && tongTien != "";
-
+        let checking = maTK.length = 5 && parseInt(maTK)> 0 && chuTK != "" && nganHang != "" && tongTien != "";
         if (checking) {
             let taiKhoanMoi = new TaiKhoanNganHang(maTK, chuTK, nganHang, tongTien);
             document.getElementById("maTaiKhoan").value = "";
             document.getElementById("chuTaiKhoan").value = "";
             document.getElementById("nganHang").value = "";
             document.getElementById("tongTien").value = "";
-
             danhSachTaiKhoan.push(taiKhoanMoi);
         } else {
-            alert("các mục không được để trống");
+            alert("các mục không được để trống và Mã tài khoản là 5 chữ số!");
         }
         display(danhSachTaiKhoan);
     }
